postcss/testData/inspections/customPropertiesSet/outsideRoot.pcss
a {
  <error descr="Custom properties sets are only allowed on `:root` rules">--a: {
    color: white;
    background-color: green;
  }</error>
}